# mlx-quant-toolkit

./: .gitignore  Makefile  README.md  agents.md  main.py  pyproject.toml
scripts/: build_tables.py  collect_data.py  init_run.py
tests/: test_canonicalize_layout.py  test_mlx_quant_sim_error.py  test_optional_mlx.py  test_packed_split_strictness.py  test_split_along_axis.py  test_weight_stats.py
