[project]
name = "custom-quant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "ml-dtypes>=0.5.4",
    "mlx>=0.30.0",
    "mlx-lm>=0.28.4",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "safetensors>=0.7.0",
]
